--- a/dsa4266.ipynb
+++ b/dsa4266.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jiasheng12/DSA4266-Grp-4/blob/main/dsa4266.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -2484,10 +2494,8 @@
         "features_to_scale = ['amt', 'time_gap', 'rolling_avg_amt']\n",
         "df_RNN[features_to_scale] = scaler.fit_transform(df_RNN[features_to_scale])\n",
         "\n",
-        "# Define sequence length\n",
+        "# Defining sequence parameters\n",
         "sequence_length = 5\n",
-        "\n",
-        "# Preparing sequences and labels\n",
         "sequences = []\n",
         "labels = []\n",
         "\n",
@@ -2504,13 +2512,13 @@
         "            sequences.append(transactions[i:i + sequence_length])\n",
         "            labels.append(is_fraud_labels[i + sequence_length])\n",
         "\n",
-        "# Convert to NumPy arrays\n",
+        "# Convert to arrays\n",
         "X = np.array(sequences)\n",
         "y = np.array(labels)\n",
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "# Flatten sequence dimension for SMOTE (reshape to 2D)\n",
+        "# Flatten sequence dimension for SMOTE\n",
         "X_train_flat = X_train.reshape(X_train.shape[0], -1)\n",
         "\n",
         "# Apply SMOTE\n",
@@ -3104,7 +3112,7 @@
       ],
       "source": [
         "y_pred_probs = model.predict([X_test_merchants, X_test_categories, X_test_hour, X_test_time_diff, X_test_amt, X_test_rolling], batch_size=4)\n",
-        "y_pred_classes = (y_pred_probs > 0.5).astype(int)  # Convert probabilities to binary classes\n",
+        "y_pred_classes = (y_pred_probs > 0.5).astype(int)\n",
         "\n",
         "# Classification Report\n",
         "print(\"Classification Report:\")\n",
@@ -4100,7 +4108,8 @@
         "4NdTjJf73unF"
       ],
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
